# stream-radar-grpcweb

./: .env  README.md  config.yaml  docker-compose.yml  setup_route.ps1
be-stream-radar-grpcweb/: .dockerignore  CMakeLists.txt  Dockerfile
be-stream-radar-grpcweb/proto/: radar.proto
be-stream-radar-grpcweb/src/: main.cpp
fe-stream-radar-grpcweb/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rspack.config.ts
fe-stream-radar-grpcweb/src/components/dashboard/: PerformanceStats.tsx  SimulationControls.tsx
fe-stream-radar-grpcweb/src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx
fe-stream-radar-grpcweb/src/components/map/: MapToolbar.tsx  RadarMap.tsx  RadarSweep.tsx  TrackTooltip.tsx
fe-stream-radar-grpcweb/src/hooks/: useMapInstance.ts  useRadarSimulation.ts
fe-stream-radar-grpcweb/src/store/: useSimulationStore.ts
fe-stream-radar-grpcweb/src/types/: radar.ts
fe-stream-radar-grpcweb/src/utils/: colors.js  formatters.ts
fe-stream-radar-grpcweb/src/utils/logger/: radarLogger.ts
fe-stream-radar-grpcweb/src/utils/proto/: radar.proto
